--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,22 @@ body {
     text-align: center;
     background-color: #f4f4f4;
 }
+
+/* Для мобильных устройств и планшетов */
 .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background: rgba(37, 74, 116, 0.7);
-    padding: 15px 0;
-    text-align: center;
-    z-index: 1000;
+    display: none;
+}
+@media (max-width: 1024px) {
+    .navbar {
+        display: block; /* Появляется на экранах до 1024px */
+        position: fixed;
+        top: 0;
+        width: 100%;
+        background: rgba(37, 74, 116, 0.7);
+        padding: 15px 0;
+        text-align: center;
+        z-index: 1000;
+    }
 }
 .navbar a {
     color: white;
@@ -40,8 +48,20 @@ header {
     margin: 20px auto;
     padding: 20px;
     background: white;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+    box-shadow: 0 0 2px rgba(29, 29, 58, 0.1);
+}
+.container2 {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 0px;
+}
+#about {
+    margin: 0 auto 20px auto; 
+    padding: 20px;
+    background: white;
+    border-radius: 3px;
+    box-shadow: 0 0 2px rgba(29, 29, 58, 0.1);
 }
 .btn {
     display: inline-block;
@@ -72,13 +92,22 @@ input, textarea {
     border-radius: 5px;
     width: 100%;
 }
+.telegram-link {
+    color: #002b5d;
+    text-decoration: underline;
+  }
+  
+.telegram-link:hover {
+    color: #000000;
+    text-decoration: none;
+  }
 /* дополнение */
 .page {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 0px;
+    gap: 20px;
     flex-wrap: wrap; /* если хотите, чтобы на узких экранах элементы переходили в колонку */
     margin: 0px;
 }
@@ -150,4 +179,30 @@ td span:not(:first-child) {
         width: 90%;
         padding: 15px;
     }
+}
+/* Левый блок */
+#left {
+    flex: 1;
+    max-width: 350px;
+}
+li {
+    color: #444444;
+    text-align: left;
+}
+h3 { 
+    color: #444444;
+}
+h2 { 
+    color:#002b5d}
+
+.layout-wrapper {
+    display: flex;
+    justify-content: space-between;   /* Отступ между блоками */
+    align-items: center;              /* Центрирует по вертикали */
+    gap: 20px;                        /* Расстояние между блоками */
+    padding: 0px;                    /* Отступы от краёв */
+    box-sizing: border-box;           /* Чтобы padding учитывался в общей ширине */
+    height: 100%;                     /* Растягивает на всю высоту */
+    max-width: 1200px;                /* Максимальная ширина контейнера */
+    margin: 0 auto;                   /* Центрирует блок по горизонтали */
 }
